...
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6EH-sr-9or">
                                <rect key="frame" x="163.66666666666666" y="359" width="65.666666666666657" height="35"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Login"/>
                                <connections>
                                    <segue destination="dNA-TS-gSw" kind="show" id="B1M-HO-gP7"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SO3-Dy-hwk">
                                <rect key="frame" x="153" y="447" width="87" height="35"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Register"/>
                                <connections>
                                    <segue destination="fRV-Yk-AFl" kind="show" id="yVw-EY-8gs"/>
                                </connections>
                            </button>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="71g-gu-UuF">
                                <rect key="frame" x="74" y="423" width="245" height="1"/>
...
                            <constraint firstItem="6EH-sr-9or" firstAttribute="top" secondItem="VhK-cU-bE1" secondAttribute="bottom" constant="84.666666666666629" id="tVk-9r-XdE"/>
                            <constraint firstItem="71g-gu-UuF" firstAttribute="centerX" secondItem="SO3-Dy-hwk" secondAttribute="centerX" id="vZy-N6-oCZ"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="lVD-V1-NIj"/>
                    <connections>
                        <outlet property="loginButton" destination="6EH-sr-9or" id="K7W-tU-vAI"/>
                        <outlet property="passwordTextField" destination="VhK-cU-bE1" id="W5c-dF-D65"/>
                        <outlet property="registerButton" destination="SO3-Dy-hwk" id="S5L-bg-uwn"/>
                        <outlet property="userTextField" destination="Mbk-bN-1I8" id="y1T-Bu-hpg"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="20.610687022900763" y="3.5211267605633805"/>
        </scene>
...
                            <constraint firstItem="A6G-ru-LVi" firstAttribute="top" secondItem="eh8-dC-XFi" secondAttribute="top" id="u1Q-W6-wTa"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="N6q-eR-rl6"/>
                    <connections>
                        <outlet property="tableView" destination="A9S-gn-76d" id="mGV-92-UKQ"/>
                        <outlet property="welcomeImage" destination="A6G-ru-LVi" id="BDB-WS-6gj"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="wjf-Uh-J36" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="864.8854961832061" y="3.5211267605633805"/>
        </scene>
...
                            <constraint firstItem="Urd-Jp-h5u" firstAttribute="top" secondItem="CZr-nA-gaX" secondAttribute="bottom" constant="26" id="xrc-gm-Ri7"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="4v3-N0-p0W"/>
                    <connections>
                        <outlet property="nameLabel" destination="Ml6-5p-Hey" id="wvu-eM-XW1"/>
                        <outlet property="nameTextField" destination="1EF-iI-ZtC" id="HDZ-sD-ozf"/>
                        <outlet property="passwordRegisterTextField" destination="CZr-nA-gaX" id="xwE-qY-crD"/>
                        <outlet property="phoneLabel" destination="wii-i6-52m" id="1cO-hQ-4Fn"/>
                        <outlet property="phoneTextField" destination="PeE-Pv-lIv" id="43d-Hy-OiL"/>
                        <outlet property="registerViewButton" destination="oU8-uU-TTw" id="9E8-vb-syG"/>
                        <outlet property="repeatPasswordTextField" destination="VJd-Bo-L8W" id="UgZ-Gw-oba"/>
                        <outlet property="userIDTextField" destination="lMt-eb-e5a" id="cJ8-9h-4Mx"/>
                        <outlet property="userIdLabel" destination="V1A-Tt-wh6" id="4o8-TQ-X3R"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="N4c-rr-HgZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="20.610687022900763" y="714.78873239436621"/>
...
